[project]
name = "exploring-diffusion-with-lora"
version = "0.1.0"
description = "Exploration of diffusion models with LoRAs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchao",
    "torchvision",
    "pytorch-triton",
    "huggingface_hub",
    "diffusers",
    "transformers",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchao = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
pytorch-triton = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]